--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,20 +24,20 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  http: ^0.12.0+2
-  dio: ^3.0.9
-  provider: ^4.1.1
-  flutter_screenutil: ^1.1.0
+  http: ^0.12.2
+  dio: ^3.0.10
+  provider: ^4.3.2+2
+  flutter_screenutil: ^3.1.0
   jh_debug: ^0.3.10
   ana_page_loop: ^0.1.7
-  shared_preferences: ^0.5.7+1
+  shared_preferences: ^0.5.12
   synchronized: ^2.2.0
-  ota_update: ^2.2.1
-  package_info: ^0.4.0+17 # app相关信息获取
-  url_launcher: ^5.4.5
-  permission_handler: ^5.0.0+hotfix.5 # 权限
+  ota_update: ^2.4.1
+  package_info: ^0.4.3 # app相关信息获取
+  url_launcher: ^5.7.2
+  permission_handler: ^5.0.1+1 # 权限
   get_it: ^4.0.2
-  fluttertoast: ^4.0.1
+  fluttertoast: ^7.1.1
 
 dev_dependencies:
   flutter_test:
