动态环境构建

--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "flutter_flexible",
   "version": "1.5.1",
   "scripts": {
-    "initApp": "flutter pub get && npm run start",
-    "start": "flutter run",
-    "watch": "flutter packages pub run build_runner watch",
-    "watch:fix": "flutter packages pub run build_runner watch --delete-conflicting-outputs",
-    "build": "npm run build:apk && npm run build:ios",
-    "build:apk": "flutter build apk",
-    "build:ios": "flutter build ios",
-    "build:web": "flutter build web",
+    "start": "npm run dev",
+    "dev": "flutter run --dart-define=INIT_ENV=dev",
+    "open:ios": "open -a Simulator",
+    "build": "npm run apk-build:prod && npm run ios-build:prod",
+    "apk-build:test": "flutter build apk --dart-define=INIT_ENV=test",
+    "apk-build:pre": "flutter build apk --dart-define=INIT_ENV=pre",
+    "apk-build:prod": "flutter build apk --dart-define=INIT_ENV=prod",
+    "ios-build:test": "flutter build ios --dart-define=INIT_ENV=test",
+    "ios-build:pre": "flutter build ios --dart-define=INIT_ENV=pre",
+    "ios-build:prod": "flutter build ios --dart-define=INIT_ENV=prod",
     "appkey": "keytool -printcert -jarfile .\/build\/app\/outputs\/apk\/release\/app-release.apk",
     "upsdk": "flutter upgrade"
   }
